docs: update docs

--- a/src/pages/guides/sheet/features/facade.en-US.mdx
+++ b/src/pages/guides/sheet/features/facade.en-US.mdx
@@ -4,6 +4,8 @@ import { Tabs } from 'nextra/components'
 
 Univer provides a Facade API to simplify the use of Univer.
 
+For more information about `@univerjs/facade`, please refer to the [Facade](/guides/sheet/facade/facade) section.
+
 ## Installation
 
 <Tabs items={['pnpm', 'npm']}>
