--- a/src/pages/guides/sheet/features/facade.zh-CN.mdx
+++ b/src/pages/guides/sheet/features/facade.zh-CN.mdx
@@ -4,6 +4,8 @@ import { Tabs } from 'nextra/components'
 
 Univer 提供了 Facade API，用于简化 Univer 的使用。
 
+关于 Facade API 的详细信息，请参考 [Facade](/guides/sheet/facade/facade) 章节。
+
 ## 安装
 
 <Tabs items={['pnpm', 'npm']}>
