fix(pro): append import sheets-exchange-client css

--- a/src/pages/pro/guides/sheet/getting-started/installation.en-US.mdx
+++ b/src/pages/pro/guides/sheet/getting-started/installation.en-US.mdx
@@ -64,6 +64,7 @@ import "@univerjs/sheets-formula/lib/index.css";
 + import '@univerjs-pro/collaboration-client/lib/index.css'
 + import '@univerjs-pro/live-share/lib/index.css'
 + import '@univerjs-pro/sheets-print/lib/index.css'
++ import '@univerjs-pro/sheets-exchange-client/lib/index.css'
 
 import { Univer } from "@univerjs/core";
 import { defaultTheme } from "@univerjs/design";
