docs(pro): update to v0.1.12 code styles

--- a/src/pages/pro/guides/sheet/getting-started/installation.en-US.mdx
+++ b/src/pages/pro/guides/sheet/getting-started/installation.en-US.mdx
@@ -94,6 +94,8 @@ and register these Pro plugins:
 ```diff
 const univer = new Univer({
   theme: defaultTheme,
+  locale: LocaleType.zh_CN,
+  locales,
 });
 
 univer.registerPlugin(UniverRenderEnginePlugin);
