--- a/src/pages/pro/guides/sheet/getting-started/installation.zh-CN.mdx
+++ b/src/pages/pro/guides/sheet/getting-started/installation.zh-CN.mdx
@@ -94,6 +94,8 @@ import { UniverSheetsUIPlugin } from "@univerjs/sheets-ui";
 ```diff
 const univer = new Univer({
   theme: defaultTheme,
+  locale: LocaleType.zh_CN,
+  locales,
 });
 
 univer.registerPlugin(UniverRenderEnginePlugin);
