docs(pro): fix translate

--- a/src/pages/pro/guides/sheet/getting-started/installation.en-US.mdx
+++ b/src/pages/pro/guides/sheet/getting-started/installation.en-US.mdx
@@ -47,7 +47,7 @@ For a more convenient development experience in subsequent development, we also 
 
 For more information on `@univerjs-pro/facade`, please refer to the [Pro Facade](/pro/guides/sheet/facade/facade) section.
 
-## 使用
+## How to Use
 
 <Callout type="info" emoji="ℹ️">
   The order in which you import style files is important. Make sure you import the `@univerjs/*` CSS styles before importing the style files for other `@univerjs-pro` plugins.
