docs: update docs

--- a/guides/sheet/facade/general.en-US.mdx
+++ b/guides/sheet/facade/general.en-US.mdx
@@ -186,7 +186,7 @@ univer.registerPlugin(UniverSheetsPlugin);
 univer.registerPlugin(UniverSheetsUIPlugin);
 univer.registerPlugin(UniverSheetsFormulaPlugin);
 
-univer.createUniverSheet({});
+univer.createUnit(UniverInstanceType.UNIVER_SHEET, {})
 
 const univerAPI = FUniver.newAPI(univer);
 
