docs: fix /api links

--- a/guides/doc/facade/doc.zh-CN.mdx
+++ b/guides/doc/facade/doc.zh-CN.mdx
@@ -18,7 +18,7 @@ Univer 文档提供专业级文档排版能力，相关概念会尽可能与 Wor
 对于换行、分页、章节、段落、表格等元素， 在文本内容中使用不同的特殊字符来标记，这些特殊字符在渲染时被转换为对应的元素。
 
 <Callout type="info" emoji="ℹ️">
-  想要进一步了解文档的数据结构设计吗？推荐阅读 [Univer 文档架构及模块设计](/blog/univer-doc-architecture) 和  [Univer 文档排版设计初探](/blog/doc-typesetting-design)。
+  想要进一步了解文档的数据结构设计吗？推荐阅读 [Univer 文档架构及模块设计](/blog/post/univer-doc-architecture) 和  [Univer 文档排版设计初探](/blog/post/doc-typesetting-design)。
 </Callout>
 
 ### 创建文档
@@ -159,6 +159,6 @@ univerAPI.executeCommand("doc.command.list-operation", {listType: 'ORDER_LIST'})
 
 更多文档的介绍和 API ，请参考：
 
-- [Univer 文档架构及模块设计](/zh-cn/blog/univer-doc-architecture)
-- [Univer 文档排版设计初探](/zh-cn/blog/doc-typesetting-design)
-- [Facade API](/api/facade/)
+- [Univer 文档架构及模块设计](/blog/post/univer-doc-architecture)
+- [Univer 文档排版设计初探](/blog/post/doc-typesetting-design)
+- [Facade API](/typedoc/@univerjs/facade/README)
