--- a/guides/sheet/customization/formula.en-US.mdx
+++ b/guides/sheet/customization/formula.en-US.mdx
@@ -525,7 +525,7 @@ Familiar with the classification of formulas
 - User
 - DefinedName
 
-Detailed API reference [FunctionType](/api/engine-formula/enums/FunctionType.html)
+Detailed API reference [FunctionType](/typedoc/@univerjs/engine-formula/enumerations/FunctionType)
 
 To implement a formula, you need to add formula description, internationalization, and formula algorithm. Take the `SUMIF` function as an example for reference.
 
