--- a/guides/sheet/customization/formula.zh-CN.mdx
+++ b/guides/sheet/customization/formula.zh-CN.mdx
@@ -526,7 +526,7 @@ comment 标记下 `@自己 : I can solve it`，示例 [\[Feature\] Math Formula 
 - User
 - DefinedName
 
-详细 API 参考 [FunctionType](/api/engine-formula/enums/FunctionType.html)
+详细 API 参考 [FunctionType](/typedoc/@univerjs/engine-formula/enumerations/FunctionType)
 
 要实现一个公式，需要添加公式描述、国际化和公式算法，以 `SUMIF` 函数的写法为例作为参考
 
