--- a/guides/sheet/facade/general.en-US.mdx
+++ b/guides/sheet/facade/general.en-US.mdx
@@ -429,7 +429,7 @@ univerAPI.registerFunction({
 
 Note
 
-- Multiple languages can be set under `locales`. For naming rules, please refer to [LocaleType](/api/core/enums/LocaleType.html). Translations for multiple formulas can be added under `functionList`. For detailed field descriptions, please refer to the [How to add formulas in Formula Engine](/guides/sheet/customization/formula/#how-to-add-formulas-in-formula-engine) section.
+- Multiple languages can be set under `locales`. For naming rules, please refer to [LocaleType](/typedoc/@univerjs/core/enumerations/LocaleType). Translations for multiple formulas can be added under `functionList`. For detailed field descriptions, please refer to the [How to add formulas in Formula Engine](/guides/sheet/customization/formula/#how-to-add-formulas-in-formula-engine) section.
 - `description` sets the description of the custom formula.
 - `calculate` writes the specific algorithm and name mapping of the calculation formula. The input parameter is the content entered by the user when using the formula, which may be a number, a string, a Boolean value, or a array.
 
