--- a/guides/sheet/facade/sheet.en-US.mdx
+++ b/guides/sheet/facade/sheet.en-US.mdx
@@ -437,4 +437,4 @@ activeWorkbook.onSelectionChange((selection) => {
 
 Please refer to the following API documentation for more information:
 
-- [Facade API](/api/facade/)
+- [Facade API](/typedoc/@univerjs/facade/README)
