--- a/guides/sheet/facade/sheet.zh-CN.mdx
+++ b/guides/sheet/facade/sheet.zh-CN.mdx
@@ -437,4 +437,4 @@ activeWorkbook.onSelectionChange((selection) => {
 
 更多 API 请查看：
 
-- [Facade API](/api/facade/)
+- [Facade API](/typedoc/@univerjs/facade/README)
