--- a/guides/sheet/getting-started/installation.zh-CN.mdx
+++ b/guides/sheet/getting-started/installation.zh-CN.mdx
@@ -3,7 +3,7 @@ import ReactLive from '@/official-site/components/ReactLive'
 
 # 安装和引入
 
-我们推荐使用 [Vite](https://vitejs.dev/)、[esbuild](https://esbuild.github.io/) 或 [Webpack 5](https://webpack.js.org/) 等对 ES Module 支持较好的构建工具来构建 Univer 应用。如果你使用了其它构建工具（例如 Webpack 4），可能会需要一些额外的配置，请阅读 [更多](/guides/quickstart/#更多) 以及 [常见问题](/guides/troubleshooting) 获取更多信息。
+我们推荐使用 [Vite](https://vitejs.dev/)、[esbuild](https://esbuild.github.io/) 或 [Webpack 5](https://webpack.js.org/) 等对 ES Module 支持较好的构建工具来构建 Univer 应用。如果你使用了其它构建工具（例如 Webpack 4），可能会需要一些额外的配置，请阅读 [常见问题](/guides/sheet/troubleshooting) 获取更多信息。
 
 ## 安装
 
@@ -146,7 +146,7 @@ const data: IWorkbookData = {};
 const workbook = univer.createUnit(UniverInstanceType.UNIVER_SHEET, {});
 ```
 
-你可以在[这里](/api/core/interfaces/IWorkbookData.html)了解 `IWorkbookData` 所支持的全部字段。
+你可以在[这里](/typedoc/@univerjs/core/interfaces/IWorkbookData)了解 `IWorkbookData` 所支持的全部字段。
 
 ### 修改数据
 
