--- a/guides/sheet/tutorials/migrate-luckysheet.en-US.mdx
+++ b/guides/sheet/tutorials/migrate-luckysheet.en-US.mdx
@@ -14,9 +14,9 @@ The core work of the conversion is to adapt the workbook configuration, workshee
 
 | | Univer | Luckysheet |
 |-------|----------------|------------|
-| Workbook configuration | [IWorkbookData](/api/core/interfaces/IWorkbookData.html) | [Overall Configuration](https://dream-num.github.io/LuckysheetDocs/guide/config.html) |
-| Worksheet configuration | [IWorksheetData](/api/core/interfaces/IWorksheetData.html) | [Sheet Configuration](https://dream-num.github.io/LuckysheetDocs/guide/sheet.html) |
-| Cell | [ICellData](/api/core/interfaces/ICellData.html) | [Cell Attributes](https://dream-num.github.io/LuckysheetDocs/guide/cell.html) |
+| Workbook configuration | [IWorkbookData](/typedoc/@univerjs/core/interfaces/IWorkbookData) | [Overall Configuration](https://dream-num.github.io/LuckysheetDocs/guide/config.html) |
+| Worksheet configuration | [IWorksheetData](/typedoc/@univerjs/core/interfaces/IWorksheetData) | [Sheet Configuration](https://dream-num.github.io/LuckysheetDocs/guide/sheet.html) |
+| Cell | [ICellData](/typedoc/@univerjs/core/interfaces/ICellData) | [Cell Attributes](https://dream-num.github.io/LuckysheetDocs/guide/cell.html) |
 
 ### Plugin
 
@@ -24,10 +24,8 @@ Luckysheet is initialized through a JSON configuration, while Univer is split, t
 
 | | Univer | Luckysheet |
 |-------|----------------|------------|
-| Conditional formatting | [@univerjs/sheets-conditional-formatting](/api/sheets-conditional-formatting/) | [luckysheet_conditionformat_save](https://dream-num.github.io/LuckysheetDocs/guide/sheet.html#luckysheet-conditionformat-save) |
-| Data validation | [@univerjs/sheets-data-validation](/api/sheets-data-validation/) | [dataverification](https://dream-num.github.io/LuckysheetDocs/zh/guide/sheet.html#dataverification) |
-
-More plugins [Reference](/api/)
+| Conditional formatting | [@univerjs/sheets-conditional-formatting](/typedoc/@univerjs/sheets-conditional-formatting/README) | [luckysheet_conditionformat_save](https://dream-num.github.io/LuckysheetDocs/guide/sheet.html#luckysheet-conditionformat-save) |
+| Data validation | [@univerjs/sheets-data-validation](/typedoc/@univerjs/sheets-data-validation/README) | [dataverification](https://dream-num.github.io/LuckysheetDocs/zh/guide/sheet.html#dataverification) |
 
 ### API
 
