--- a/pro/guides/sheet/facade/sheet.en-US.mdx
+++ b/pro/guides/sheet/facade/sheet.en-US.mdx
@@ -14,7 +14,7 @@ univerAPI.importXLSXToUnitId(file).then((id)=>{
 
 ### Import XLSX To Get Workbook Data
 
-If not in a collaborative environment, when using the import XLSX functionality individually, use the API `importXLSXToSnapshot` to return the sheet data in the [IWorkbookData](/api/core/interfaces/IWorkbookData.html) format.
+If not in a collaborative environment, when using the import XLSX functionality individually, use the API `importXLSXToSnapshot` to return the sheet data in the [IWorkbookData](/typedoc/@univerjs/core/interfaces/IWorkbookData) format.
 
 ```javascript
 univerAPI.importXLSXToSnapshot(file).then((data)=>{
