--- a/pro/guides/sheet/facade/sheet.zh-CN.mdx
+++ b/pro/guides/sheet/facade/sheet.zh-CN.mdx
@@ -15,7 +15,7 @@ univerAPI.importXLSXToUnitId(file).then((id)=>{
 
 ### 导入 XLSX 得到 Workbook Data
 
-如果不在协同环境，单独使用导入 XLSX 能力，使用 API `importXLSXToSnapshot` 返回 [IWorkbookData](/api/core/interfaces/IWorkbookData.html) 格式的表格数据。
+如果不在协同环境，单独使用导入 XLSX 能力，使用 API `importXLSXToSnapshot` 返回 [IWorkbookData](/typedoc/@univerjs/core/interfaces/IWorkbookData) 格式的表格数据。
 
 ```javascript
 univerAPI.importXLSXToSnapshot(file).then((data)=>{
