--- a/pro/guides/sheet/getting-started/installation.en-US.mdx
+++ b/pro/guides/sheet/getting-started/installation.en-US.mdx
@@ -7,7 +7,7 @@ import ReactLive from '@/official-site/components/ReactLive'
   Univer Pro extends Univer with a plugin system that provides more features and plugins. Therefore, before using Univer Pro, you need to understand the basics of using Univer. If you haven't used Univer before, please read the [Univer documentation](/guides/sheet/getting-started/quickstart).
 </Callout>
 
-We recommend using build tools that have good support for ES Modules, such as [Vite](https://vitejs.dev/), [esbuild](https://esbuild.github.io/), or [Webpack 5](https://webpack.js.org/) to build Univer applications. If you use other build tools (e.g., Webpack 4), you may need some additional configuration. Please read [More](/guides/sheet/getting-started/quickstart/) and [Troubleshooting](/guides/sheet/troubleshooting) for more information.
+We recommend using build tools that have good support for ES Modules, such as [Vite](https://vitejs.dev/), [esbuild](https://esbuild.github.io/), or [Webpack 5](https://webpack.js.org/) to build Univer applications. If you use other build tools (e.g., Webpack 4), you may need some additional configuration. Please read [Troubleshooting](/guides/sheet/troubleshooting) for more information.
 
 ## Installation
 
