--- a/pro/guides/sheet/getting-started/installation.zh-CN.mdx
+++ b/pro/guides/sheet/getting-started/installation.zh-CN.mdx
@@ -7,7 +7,7 @@ import ReactLive from '@/official-site/components/ReactLive'
   Univer Pro 在 Univer 的基础之上通过插件系统提供了更多的功能和插件，因此在使用 Univer Pro 之前，你需要先了解有关 Univer 使用的基础知识。如果你还没有使用过 Univer ，请先阅读 [Univer 文档](/guides/sheet/getting-started/quickstart)。
 </Callout>
 
-我们推荐使用 [Vite](https://vitejs.dev/)、[esbuild](https://esbuild.github.io/) 或 [Webpack 5](https://webpack.js.org/) 等对 ES Module 支持较好的构建工具来构建 Univer 应用。如果你使用了其它构建工具（例如 Webpack 4），可能会需要一些额外的配置，请阅读 [更多](/guides/sheet/getting-started/quickstart/#更多) 以及 [常见问题](/guides/sheet/troubleshooting) 获取更多信息。
+我们推荐使用 [Vite](https://vitejs.dev/)、[esbuild](https://esbuild.github.io/) 或 [Webpack 5](https://webpack.js.org/) 等对 ES Module 支持较好的构建工具来构建 Univer 应用。如果你使用了其它构建工具（例如 Webpack 4），可能会需要一些额外的配置，请阅读 [常见问题](/guides/sheet/troubleshooting) 获取更多信息。
 
 ## 安装
 
