--- a/guides/doc/facade/doc.en-US.mdx
+++ b/guides/doc/facade/doc.en-US.mdx
@@ -18,7 +18,7 @@ Style information is stored in a separate data structure and is associated with 
 For elements such as line breaks, page breaks, sections, paragraphs, tables, etc., the text content is marked with different special characters that are converted to the corresponding element at rendering time.
 
 <Callout type="info" emoji="ℹ️">
-  Want to learn more about document data structure design? We recommend reading [Univer Document Architecture and Module Design](/blog/univer-doc-architecture) and [Initial Exploration of Document Typesetting Design in Univer](/blog/doc-typesetting-design).
+  Want to learn more about document data structure design? We recommend reading [Univer Document Architecture and Module Design](/blog/post/univer-doc-architecture) and [Initial Exploration of Document Typesetting Design in Univer](/blog/post/doc-typesetting-design).
 </Callout>
 
 ### Create Document
@@ -159,6 +159,6 @@ univerAPI.executeCommand("doc.command.list-operation", {listType: 'ORDER_LIST'})
 
 For more documentation and APIs, please refer to:
 
-- [Univer Document Architecture and Module Design](/blog/univer-doc-architecture)
-- [Initial Exploration of Document Typesetting Design in Univer](/blog/doc-typesetting-design)
-- [Facade API](/api/facade/)
+- [Univer Document Architecture and Module Design](/blog/post/univer-doc-architecture)
+- [Initial Exploration of Document Typesetting Design in Univer](/blog/post/doc-typesetting-design)
+- [Facade API](/typedoc/@univerjs/facade/README)
