--- a/guides/general/facade/facade.en-US.mdx
+++ b/guides/general/facade/facade.en-US.mdx
@@ -6,10 +6,10 @@ The plugin capabilities of Univer are very powerful, allowing you to extend almo
 
 `@univerjs/facade` is suitable for everyone, especially for those who are familiar with Luckysheet's old users, or just want to use Univer's functions simply without intending to deeply extend users. With `@univerjs/facade`, you can quickly get started and easily implement various common CRUD functions.
 
-This document will detail how to use the API provided by `@univerjs/facade` to help you fully unleash the potential of Univer. If you want to see all the Facade APIs, please refer to the [API documentation](/api/facade) of `@univerjs/facade`. By learning and using these APIs, you will be able to develop powerful office applications more efficiently and conveniently.
+This document will detail how to use the API provided by `@univerjs/facade` to help you fully unleash the potential of Univer. If you want to see all the Facade APIs, please refer to the [API documentation](/typedoc/@univerjs/facade/README) of `@univerjs/facade`. By learning and using these APIs, you will be able to develop powerful office applications more efficiently and conveniently.
 
 <Callout type="info" emoji="ℹ️">
-  In fact, [Uniscript](/api/uniscript) also uses `@univerjs/facade`, so you can directly use the API provided by `@univerjs/facade` in the Uniscript panel created by `@univerjs/uniscript`.
+  In fact, [Uniscript](/typedoc/@univerjs/uniscript/README) also uses `@univerjs/facade`, so you can directly use the API provided by `@univerjs/facade` in the Uniscript panel created by `@univerjs/uniscript`.
 </Callout>
 
 ## Installation
@@ -45,4 +45,4 @@ You can then use the Univer functionality by calling methods on the `univerAPI` 
 univerAPI.getActiveWorkbook();
 ```
 
-You can refer to the [Facade API documentation](/api/facade/) for a more detailed description of what you can achieve with Facade. In the following sections, we will demonstrate some common usage scenarios.
+You can refer to the [Facade API documentation](/typedoc/@univerjs/facade/README) for a more detailed description of what you can achieve with Facade. In the following sections, we will demonstrate some common usage scenarios.
