--- a/guides/sheet/getting-started/installation.en-US.mdx
+++ b/guides/sheet/getting-started/installation.en-US.mdx
@@ -3,7 +3,7 @@ import ReactLive from '@/official-site/components/ReactLive'
 
 # Installation & Usage
 
-We recommend using build tools such as [Vite](https://vitejs.dev/), [esbuild](https://esbuild.github.io/), or [Webpack 5](https://webpack.js.org/) that have good support for ES Modules to build Univer applications. If you are using other build tools like Webpack 4, you may require some additional configurations. For more information, please refer to [Read More](/guides/quickstart#read-more) and the [Troubleshooting](/guides/troubleshooting).
+We recommend using build tools such as [Vite](https://vitejs.dev/), [esbuild](https://esbuild.github.io/), or [Webpack 5](https://webpack.js.org/) that have good support for ES Modules to build Univer applications. If you are using other build tools like Webpack 4, you may require some additional configurations. For more information, please refer to [Read More](/guides/quickstart#read-more) and the [Troubleshooting](/guides/sheet/troubleshooting).
 
 ## Installation
 
@@ -146,7 +146,7 @@ const data: IWorkbookData = {};
 const workbook = univer.createUnit(UniverInstanceType.UNIVER_SHEET, {});
 ```
 
-You can learn more about all the fields supported by `IWorkbookData` [here](/api/core/interfaces/IWorkbookData.html).
+You can learn more about all the fields supported by `IWorkbookData` [here](/typedoc/@univerjs/core/interfaces/IWorkbookData).
 
 ### Modifying Data
 
