--- a/guides/general/architecture/web-worker.en-US.mdx
+++ b/guides/general/architecture/web-worker.en-US.mdx
@@ -58,7 +58,7 @@ For more information, please refer to [examples/sheets](https://github.com/dream
 
 The architecture of Univer's Web Worker is as follows:
 
-![](./web-worker/web-worker-architecture.png)
+![Web Worker Architecture](./web-worker/web-worker-architecture.png)
 
 Documents created and edits made in the main thread will be synchronized to the Web Worker through the following steps:
 
