--- a/guides/general/architecture/web-worker.zh-CN.mdx
+++ b/guides/general/architecture/web-worker.zh-CN.mdx
@@ -58,7 +58,7 @@ univer.registerPlugin(UniverSheetsFormula);
 
 Univer 的 Web Worker 架构图下图所示：
 
-![](./web-worker/web-worker-architecture.png)
+![Web Worker 架构](./web-worker/web-worker-architecture.png)
 
 主线程中的创建的文档和发生的编辑会被同步到 Web Worker：
 
