--- a/guides/doc/features/core.en-US.mdx
+++ b/guides/doc/features/core.en-US.mdx
@@ -2,19 +2,19 @@ import { Tabs } from 'nextra/components'
 
 # Core Features
 
-Core packages implement the basic functions of the spreadsheet, including the core functions of Univer Sheet, such as creating workbooks, cell editing, and cell selection.
+Core packages implement the basic functions of the document, including the core functions of Univer Doc, such as browsing documents, editing documents, etc.
 
 ## Installation
 
 <Tabs items={['pnpm', 'npm']}>
   <Tabs.Tab label="pnpm">
     ```shell
-    pnpm add @univerjs/core @univerjs/design @univerjs/docs @univerjs/docs-ui @univerjs/engine-formula @univerjs/engine-render @univerjs/sheets @univerjs/sheets-formula @univerjs/sheets-ui @univerjs/ui
+    pnpm add @univerjs/core @univerjs/design @univerjs/docs @univerjs/docs-ui @univerjs/engine-formula @univerjs/engine-render @univerjs/ui
     ```
   </Tabs.Tab>
   <Tabs.Tab label="npm">
     ```shell
-    npm install @univerjs/core @univerjs/design @univerjs/docs @univerjs/docs-ui @univerjs/engine-formula @univerjs/engine-render @univerjs/sheets @univerjs/sheets-formula @univerjs/sheets-ui @univerjs/ui
+    npm install @univerjs/core @univerjs/design @univerjs/docs @univerjs/docs-ui @univerjs/engine-formula @univerjs/engine-render @univerjs/ui
     ```
   </Tabs.Tab>
 </Tabs>
@@ -25,8 +25,6 @@ Core packages implement the basic functions of the spreadsheet, including the co
 import "@univerjs/design/lib/index.css";
 import "@univerjs/ui/lib/index.css";
 import "@univerjs/docs-ui/lib/index.css";
-import "@univerjs/sheets-ui/lib/index.css";
-import "@univerjs/sheets-formula/lib/index.css";
 
 import { Univer } from "@univerjs/core";
 import { defaultTheme } from "@univerjs/design";
@@ -38,10 +36,6 @@ import { UniverUIPlugin } from "@univerjs/ui";
 
 import { UniverDocsPlugin } from "@univerjs/docs";
 import { UniverDocsUIPlugin } from "@univerjs/docs-ui";
-
-import { UniverSheetsPlugin } from "@univerjs/sheets";
-import { UniverSheetsFormulaPlugin } from "@univerjs/sheets-formula";
-import { UniverSheetsUIPlugin } from "@univerjs/sheets-ui";
 ```
 
 ## Internationalization
@@ -61,8 +55,6 @@ const univer = new Univer({
     [LocaleType.EN_US]: Tools.deepMerge(
       DesignEnUS,
       DocsUIEnUS,
-      SheetsEnUS,
-      SheetsUIEnUS,
       UIEnUS
     ),
   },
@@ -77,18 +69,20 @@ univer.registerPlugin(UniverFormulaEnginePlugin);
 
 univer.registerPlugin(UniverUIPlugin, {
   container: 'app',
+  footer: false,
 });
 
-univer.registerPlugin(UniverDocsPlugin, {
-  hasScroll: false,
+univer.registerPlugin(UniverDocsPlugin);
+univer.registerPlugin(UniverDocsUIPlugin, {
+  container: 'univerdoc',
+  layout: {
+    docContainerConfig: {
+      innerLeft: false,
+    },
+  },
 });
-univer.registerPlugin(UniverDocsUIPlugin);
 
-univer.registerPlugin(UniverSheetsPlugin);
-univer.registerPlugin(UniverSheetsUIPlugin);
-univer.registerPlugin(UniverSheetsFormulaPlugin);
-
-univer.createUnit(UniverInstanceType.UNIVER_SHEET, {});
+univer.createUnit(UniverInstanceType.UNIVER_DOC, {});
 ```
 
 ## Configuration
